--- a/src/app/pages/board/communityboard/communityboard.page.scss
+++ b/src/app/pages/board/communityboard/communityboard.page.scss
@@ -62,6 +62,8 @@ app-communityboard {
     margin: auto 0 auto 0;
 
     .moreoptions-avatar {
+      height: 45px;
+      width: 45px;
       margin: 0 auto;
       top: 0
     }
