add different banners

--- a/src/app/pages/feature/showfeature/showfeature.page.html
+++ b/src/app/pages/feature/showfeature/showfeature.page.html
@@ -446,10 +446,25 @@
           Relax Graphics
         </div>-->
 
-        <div class="graphic-banner">
+        <!-- <div class="graphic-banner">
           <h1>WELCOME</h1>
           <p>Learn and grow with the community.</p>
           <ion-button>Let's start</ion-button>
+
+          <img src="/assets/img/lesson-graphic.png" /> 
+        </div> -->
+
+        <!-- <div class="graphic-banner orange">
+          <h1>Keep It On</h1>
+          <p>Discover more plans or catch up on missed days.</p>
+          <ion-button>Continue</ion-button>
+
+          <img src="/assets/img/lesson-graphic.png" /> 
+        </div> -->
+
+        <div class="graphic-banner blue">
+          <h1>Relax</h1>
+          <p>There is no lesson scheduled today. Enjoy your day off.</p>
 
           <img src="/assets/img/lesson-graphic.png" /> 
         </div>
