--- a/src/app/pages/feature/showfeature/showfeature.page.scss
+++ b/src/app/pages/feature/showfeature/showfeature.page.scss
@@ -89,6 +89,14 @@ app-showfeature {
     }
   }
 
+  .orange {
+    background-color: #FF9466;
+  }
+
+  .blue {
+    background-color: #2FB4FF;
+  }
+
   .desktop-ion-list {
     border-radius: 5px;
     margin: 12px;
